--- a/style.css
+++ b/style.css
@@ -4,15 +4,16 @@ body {
     font-family: 'Expletus Sans', cursive;
 }
 
-.navbar {
-    font-size: 25px;
+.navbar{
     font-weight: 600;
 }
 
+.navbar-brand {
+    font-size: 25px;
+}
+
 .nav-link {
-    font-family: 'Expletus Sans', cursive;
     font-size: 20px;
-    font-weight: 600;
 }
 
 .text-shadow-1 { text-shadow: 0 .125rem .25rem rgba(0, 0, 0, .25); }
