--- a/style.css
+++ b/style.css
@@ -36,3 +36,21 @@ body {
     font-size: 25px;
     font-weight: 600;
 }
+
+#card-cafe {
+    background-image: url('https://source.unsplash.com/random/?cafe');
+    // Add gradient to cover
+    background-image: backgroundImage:linear-gradient(rgba(0, 0, 0, 1),rgba(0, 0, 0, 1),rgba(0, 0, 0, 1),rgba(0, 0, 0, 1)), url('https://source.unsplash.com/random/?cafe');
+}
+
+#card-cafe2 {
+    background-image: url('https://source.unsplash.com/random/?cafe,night');
+// Add gradient to cover
+background-image: backgroundImage:linear-gradient(rgba(0, 0, 0, 1),rgba(0, 0, 0, 1),rgba(0, 0, 0, 1),rgba(0, 0, 0, 1)), url('https://source.unsplash.com/random/?cafe');
+}
+
+#card-cafe3 {
+    background-image: url('https://source.unsplash.com/random/?cafe,indonesia');
+// Add gradient to cover
+background-image: backgroundImage:linear-gradient(rgba(0, 0, 0, 1),rgba(0, 0, 0, 1),rgba(0, 0, 0, 1),rgba(0, 0, 0, 1)), url('https://source.unsplash.com/random/?cafe');
+}
